--- a/package.json
+++ b/package.json
@@ -8,5 +8,63 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
+    "ansi-regex": "^6.1.0",
+    "ansi-styles": "^4.3.0",
+    "argparse": "^2.0.1",
+    "balanced-match": "^1.0.2",
+    "binary-extensions": "^2.3.0",
+    "brace-expansion": "^2.0.1",
+    "camelcase": "^6.3.0",
+    "chalk": "^4.1.2",
+    "cliui": "^8.0.1",
+    "color-convert": "^2.0.1",
+    "color-name": "^1.1.4",
+    "cross-spawn": "^7.0.6",
+    "decamelize": "^4.0.0",
+    "eastasianwidth": "^0.2.0",
+    "emoji-regex": "^9.2.2",
+    "escalade": "^3.2.0",
+    "flat": "^5.0.2",
+    "get-caller-file": "^2.0.5",
+    "has-flag": "^4.0.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-number": "^7.0.0",
+    "is-plain-obj": "^2.1.0",
+    "is-unicode-supported": "^0.1.0",
+    "isexe": "^2.0.0",
+    "lru-cache": "^10.4.3",
+    "minipass": "^7.1.2",
+    "p-locate": "^5.0.0",
+    "path-scurry": "^1.11.1",
+    "randombytes": "^2.1.0",
+    "require-directory": "^2.1.1",
+    "safe-buffer": "^5.2.1",
+    "shebang-command": "^2.0.0",
+    "shebang-regex": "^3.0.0",
+    "signal-exit": "^4.1.0",
+    "string-width": "^5.1.2",
+    "string-width-cjs": "^4.2.3",
+    "strip-ansi": "^7.1.0",
+    "strip-ansi-cjs": "^6.0.1",
+    "which": "^2.0.2",
+    "wrap-ansi": "^8.1.0",
+    "wrap-ansi-cjs": "^7.0.0",
+    "y18n": "^5.0.8",
+    "yocto-queue": "^0.1.0"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/xch0501/ci-test-example.git"
+  },
+  "bugs": {
+    "url": "https://github.com/xch0501/ci-test-example/issues"
+  },
+  "homepage": "https://github.com/xch0501/ci-test-example#readme",
   "description": ""
 }
